kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames: ["rook.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 1
